--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "16": "^0.0.2",
-    "javascripting": "^2.7.3"
+    "javascripting": "^2.6.1",
+    "prompt-sync": "^4.1.6"
   }
 }
